Add unit testing, integration testing

--- a/TestFunctionApp/TestFunctionApp.csproj
+++ b/TestFunctionApp/TestFunctionApp.csproj
@@ -20,15 +20,12 @@
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Configuration\Configuration.csproj" />
     <ProjectReference Include="..\Services.Definition\Services.Definition.csproj" />
     <ProjectReference Include="..\Services.Implementation\Services.Implementation.csproj" />
   </ItemGroup>
