--- a/TestWebApi/Dockerfile
+++ b/TestWebApi/Dockerfile
@@ -19,4 +19,5 @@ RUN dotnet publish "TestWebApi.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:80
 ENTRYPOINT ["dotnet", "TestWebApi.dll"]
