--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build ./TestWebApi --tag helennow.azurecr.io/testwebapi:latest
+        docker build . --file ./Dockerfile --tag helennow.azurecr.io/testwebapi:latest
         docker push helennow.azurecr.io/testwebapi:latest
 
     - name: Deploy to Azure Web App
